--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,7 +1,7 @@
 /* ----------------------- BACKGROUND IMAGE -----------------------*/
 .wrapper {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background: rgba(0, 0, 0, 0.7);
 }
 
