--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -5,7 +5,6 @@
   background: rgba(0, 0, 0, 0.7);
 }
 
-
 @media (max-width: 850px) {
   .wrapper {
     height: 100%;
@@ -34,6 +33,13 @@ body {
   background: rgba(0, 0, 0, 0.1);
   margin: 5% 0;
 }
+
+.card-img-top {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
 
 .card a {
   color: white;
