--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,6 +1,6 @@
 /* ----------------------- BACKGROUND IMAGE -----------------------*/
 .wrapper {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   background: rgba(0, 0, 0, 0.7);
 }
